Refactor coding standards and docs